--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "koa-router": "^7.2.1",
     "koa-static": "^4.0.1",
     "koa-views": "^6.1.1",
+    "mongoose": "^4.13.6",
     "object-assign": "4.1.1",
     "postcss-flexbugs-fixes": "3.2.0",
     "postcss-loader": "2.0.6",
@@ -40,7 +41,9 @@
     "react": "^16.0.0",
     "react-dev-utils": "^4.1.0",
     "react-dom": "^16.0.0",
+    "react-redux": "^5.0.6",
     "redux": "^3.7.2",
+    "redux-thunk": "^2.2.0",
     "style-loader": "0.18.2",
     "styled-components": "^2.2.3",
     "sw-precache-webpack-plugin": "0.11.4",
@@ -53,11 +56,11 @@
   "scripts": {
     "start": "npm run clientStart && npm run serverStart",
     "serverStart": "node index.js",
+    "serverStart:dev": "nodemon --harmony index.js",
     "clientStart": "NODE_ENV='development' webpack-dev-server --watch --hot --inline",
     "build": "NODE_ENV='production' webpack",
     "test": "node scripts/client/test.js --env=jsdom",
     "flow": "flow"
-
   },
   "jest": {
     "collectCoverageFrom": [
@@ -101,14 +104,15 @@
     "extends": "react-app"
   },
   "devDependencies": {
+    "css-entry-webpack-plugin": "^1.0.0-beta.4",
+    "css-hot-loader": "^1.3.0",
+    "css-loader": "0.14.5",
     "eslint": "^4.9.0",
     "eslint-config-airbnb": "^16.1.0",
     "eslint-plugin-import": "^2.8.0",
     "eslint-plugin-jsx-a11y": "^6.0.2",
     "eslint-plugin-react": "^7.4.0",
-    "css-entry-webpack-plugin": "^1.0.0-beta.4",
-    "css-hot-loader": "^1.3.0",
-    "css-loader": "0.14.5",
+    "nodemon": "^1.12.1",
     "style-loader": "^0.13.0",
     "svg-sprite-loader": "^3.0.5",
     "webpack": "^2.2.1",
