--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "ajv": "^5.5.2",
     "autoprefixer": "7.1.2",
     "babel-core": "6.25.0",
     "babel-eslint": "7.2.3",
@@ -42,7 +43,6 @@
     "react-dev-utils": "^4.1.0",
     "react-dom": "^16.0.0",
     "react-redux": "^5.0.6",
-    "react-toolbox": "^2.0.0-beta.12",
     "redux": "^3.7.2",
     "redux-thunk": "^2.2.0",
     "style-loader": "0.18.2",
