--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "fs-extra": "3.0.1",
     "html-webpack-plugin": "2.29.0",
     "jest": "20.0.4",
+    "jsonwebtoken": "^8.1.0",
     "koa": "^2.3.0",
     "koa-bodyparser": "^4.2.0",
     "koa-json": "^2.0.2",
@@ -35,6 +36,7 @@
     "koa-views": "^6.1.1",
     "mongoose": "^4.13.6",
     "object-assign": "4.1.1",
+    "passport": "^0.4.0",
     "postcss-flexbugs-fixes": "3.2.0",
     "postcss-loader": "2.0.6",
     "promise": "8.0.1",
