--- a/package.json
+++ b/package.json
@@ -2,6 +2,16 @@
   "name": "client",
   "version": "0.1.0",
   "private": true,
+  "scripts": {
+    "start": "npm run clientStart && npm run serverStart",
+    "serverStart": "node index.js",
+    "serverStart:dev": "nodemon --harmony index.js",
+    "clientStart": "NODE_ENV='development' webpack-dev-server --watch --hot --inline",
+    "build": "NODE_ENV='production' webpack",
+    "apidoc": "apidoc -i src/server/routes -o doc/",
+    "test": "node scripts/client/test.js --env=jsdom",
+    "flow": "flow"
+  },
   "dependencies": {
     "ajv": "^5.5.2",
     "autoprefixer": "7.1.2",
@@ -31,12 +41,15 @@
     "koa-json": "^2.0.2",
     "koa-logger": "^3.1.0",
     "koa-onerror": "^3.1.0",
+    "koa-passport": "^4.0.1",
     "koa-router": "^7.2.1",
     "koa-static": "^4.0.1",
     "koa-views": "^6.1.1",
     "mongoose": "^4.13.6",
     "object-assign": "4.1.1",
     "passport": "^0.4.0",
+    "passport-jwt": "^3.0.1",
+    "passport-local": "^1.0.0",
     "postcss-flexbugs-fixes": "3.2.0",
     "postcss-loader": "2.0.6",
     "promise": "8.0.1",
@@ -55,16 +68,6 @@
     "webpack-dev-server": "2.8.2",
     "webpack-manifest-plugin": "1.2.1",
     "whatwg-fetch": "2.0.3"
-  },
-  "scripts": {
-    "start": "npm run clientStart && npm run serverStart",
-    "serverStart": "node index.js",
-    "serverStart:dev": "nodemon --harmony index.js",
-    "clientStart": "NODE_ENV='development' webpack-dev-server --watch --hot --inline",
-    "build": "NODE_ENV='production' webpack",
-    "apidoc": "apidoc -i src/server/routes -o doc/",
-    "test": "node scripts/client/test.js --env=jsdom",
-    "flow": "flow"
   },
   "jest": {
     "collectCoverageFrom": [
